# thiagotavares1997-Raspberry-MAX6675toQAPASSLED16x2

./: CMakeLists.txt  build.rar  main.c
